--- a/elements/css/route-tile.css
+++ b/elements/css/route-tile.css
@@ -1,5 +1,6 @@
 @host {
   :scope {
+    display: block;
     position: relative;
 
     -webkit-perspective: 600px;
@@ -13,6 +14,8 @@
   right: 4px;
   top: 4px;
   bottom: 4px;
+
+  overflow: hidden;
 
   background-color: rgba(255,255,255,.2);
   box-shadow: inset 0 0 50px rgba(255,255,255,.5);
