--- a/elements/css/route-tile-manager.css
+++ b/elements/css/route-tile-manager.css
@@ -5,3 +5,16 @@
     margin: 16px;
   }
 }
+
+.wrapper {
+  margin: 4px;
+  position: relative;
+}
+
+route-ui-tile {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
