--- a/elements/route-ui-tile/route-ui-tile.css
+++ b/elements/route-ui-tile/route-ui-tile.css
@@ -1,10 +1,6 @@
 @host {
   :scope {
     display: block;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
+    background-color: rgba(255,255,255,0.5);
   }
 }
