--- a/elements/css/route-app.css
+++ b/elements/css/route-app.css
@@ -1,18 +1,21 @@
 @host {
   :scope {
-    /*position: absolute;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
-    right: 0;*/
+    right: 0;
 
-    display: block;
-    position: relative;
-    width: 1280px;
-    height: 800px;
-
-    background: -webkit-linear-gradient(135deg, #442222, #221111);
+    background: -webkit-linear-gradient(135deg, #006DB0, #006DB0);
   }
+}
+
+#page {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 #tiles {
@@ -21,4 +24,9 @@
   bottom: 32px;
   left: 32px;
   right: 32px;
+}
+
+#bar {
+  width: 128px;
+  background-color: #111;
 }
