--- a/elements/route-ui-tile/route-ui-tile.css
+++ b/elements/route-ui-tile/route-ui-tile.css
@@ -20,14 +20,36 @@
 
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
+
     -webkit-transition: all 0.30s ease-out;
     transition: all 0.30s ease-out;
 
     overflow: hidden;
-
     background-color: rgba(255,255,255,0.5);
 }
 #tile.dragging {
   -webkit-transition: none;
   transition: none;
+}
+
+#message {
+    position: absolute;
+    top: 32px;
+    bottom: 32px;
+    left: 32px;
+    right: 32px;
+    border-radius: 4px;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 1000;
+
+    -webkit-transition: opacity 1s ease-out;
+    transition: opacity 1s ease-out;
+
+    color: #FFF;
+    text-align: center;
+    padding: 16px;
+    font-family: "Roboto Condensed";
+    font-weight: 300;
+    font-size: 24px;
+    opacity: 0;
 }
