--- a/elements/css/route-app.css
+++ b/elements/css/route-app.css
@@ -7,6 +7,13 @@
     right: 0;
 
     background: -webkit-linear-gradient(135deg, #006DB0, #006DB0);
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
   }
 }
 
