--- a/elements/css/route-app.css
+++ b/elements/css/route-app.css
@@ -17,12 +17,26 @@
   }
 }
 
-#page {
+polymer-ui-pages {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+
+#clock {
+  background-color: #000;
+  opacity: 0;
+  font-family: "Roboto Condensed", Helvetica, sans-serif;
+  font-size: 64px;
+  font-weight: 300;
+  color: white;
+  -webkit-transition: opacity 5s ease-out;
+}
+#clock.polymer-selected {
+  opacity: 1;
 }
 
 #tiles {
