--- a/elements/route-ui-lockscreen/route-ui-lockscreen.css
+++ b/elements/route-ui-lockscreen/route-ui-lockscreen.css
@@ -5,11 +5,15 @@
 }
 
 #time {
-  font-family: "Roboto Condensed", Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
   font-size: 64px;
-  font-weight: 300;
   color: white;
+  text-align: center;
 }
 .hours {
-  text-align: right;
+  font-weight: 400;
+}
+.minutes {
+  color: #999;
 }
