--- a/elements/route-ui-lockscreen/route-ui-lockscreen.css
+++ b/elements/route-ui-lockscreen/route-ui-lockscreen.css
@@ -13,8 +13,31 @@
 }
 .hours {
   font-weight: 300;
-  color: #999;
+  color: #FFF;
 }
 .minutes {
-  color: #444;
+  color: #999;
+}
+
+#extras {
+  height: 64px;
+  opacity: 0.5;
+}
+
+#temp {
+  color: #FFF;
+  font-size: 48px;
+  line-height: 64px;
+  height: 64px;
+  padding-left: 20px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 100;
+}
+
+:host.night #time {
+  opacity: 0.5;
+}
+
+:host.night #extras {
+  opacity: 0.3;
 }
