--- a/elements/route-ui-bar/route-ui-bar.css
+++ b/elements/route-ui-bar/route-ui-bar.css
@@ -1,11 +1,9 @@
-@host {
-  :scope {
-    background-color: #000;
-    color: #FFF;
-    font-family: "Roboto", Helvetica, sans-serif;
-    font-weight: 100;
-    font-size: 32px;
-  }
+:host {
+  background-color: #000;
+  color: #FFF;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-weight: 100;
+  font-size: 32px;
 }
 
 #room {
