--- a/src/elements/route-ui-room-picker/route-ui-room-picker.css
+++ b/src/elements/route-ui-room-picker/route-ui-room-picker.css
@@ -22,6 +22,9 @@ ul {
   list-style-type: none;
 }
 li {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  margin-bottom: -1px;
   font-size: 16px;
-  padding: 10px 0;
+  padding: 16px 0;
 }
