--- a/src/elements/route-tile/route-tile.css
+++ b/src/elements/route-tile/route-tile.css
@@ -7,8 +7,7 @@
   perspective-origin: 50% 50%;
 }
 
-
-#tile {
+#wrapper {
   position: absolute;
   top: 4px;
   left: 4px;
@@ -25,7 +24,7 @@
   overflow: hidden;
   background-color: rgba(255,255,255,0.5);
 }
-#tile.dragging {
+:host(.animating) #wrapper {
   -webkit-transition: none;
   transition: none;
 }
