--- a/src/elements/route-tile-media/route-tile-media.css
+++ b/src/elements/route-tile-media/route-tile-media.css
@@ -10,6 +10,14 @@ route-tile {
   right: 0;
 }
 
+route-ui-image {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .album-name {
   position: absolute;
   left: 0;
