--- a/src/elements/route-tile-power/route-tile-power.css
+++ b/src/elements/route-tile-power/route-tile-power.css
@@ -2,84 +2,10 @@
   position: relative;
 }
 
-route-ui-tile {
+route-tile {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-}
-
-route-ui-message {
-  position: absolute;
-  top: 32px;
-  bottom: 32px;
-  left: 32px;
-  right: 32px;
-  z-index: 1000;
-
-  font-size: 32px;
-}
-
-.top,.left,.right,.bottom{
-  position: absolute;
-  height: 20px;
-  width: 88px;
-  text-align: center;
-
-  font-size: 14px;
-  font-family: "Roboto Condensed";
-  font-weight: 300;
-  color: #FFF;
-  text-transform: uppercase;
-  opacity: 0;
-  -webkit-transition: opacity 0.5s;
-}
-.dragging .top,
-.dragging .left,
-.dragging .right,
-.dragging .bottom {
-  opacity: 0.5;
-}
-.top {
-  top: 0;
-  left: 20px;
-  right: 20px;
-}
-.bottom {
-  bottom: 0;
-  left: 20px;
-  right: 20px;
-}
-.right {
-  -webkit-transform-origin: 0% 0%;
-  -webkit-transform: rotate(90deg);
-  transform-origin: 0% 0%;
-  transform: rotate(90deg);
-  left: 128px;
-  top: 20px;
-}
-.left {
-  -webkit-transform-origin: 0% 0%;
-  -webkit-transform: rotate(-90deg);
-  transform-origin: 0% 0%;
-  transform: rotate(-90deg);
-  left: 0px;
-  top: 108px;
-}
-.icon {
-  position: absolute;
-  left: 20px;
-  right: 20px;
-  top: 20px;
-  bottom: 20px;
-  /*background-image: -webkit-radial-gradient(center center, circle contain, rgba(0,0,0,.5) 0%, rgba(0,0,0,.5) 70%, rgba(0,0,0,0) 100%); /* New WebKit syntax */*/
-}
-.icon .name {
-  text-align: center;
-  font-family: "Roboto Condensed";
-  font-weight: 300;
-  color: #FFF;
-  text-transform: uppercase;
-  font-size: 18px;
 }
