--- a/src/elements/route-tile-media/route-tile-media.css
+++ b/src/elements/route-tile-media/route-tile-media.css
@@ -32,4 +32,8 @@ route-ui-image {
   font-size: 16px;
 
   z-index: 10;
+
+  text-overflow:ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
