--- a/src/elements/route-tile/route-tile.css
+++ b/src/elements/route-tile/route-tile.css
@@ -18,11 +18,12 @@
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
 
-  -webkit-transition: all 0.30s ease-out;
-  transition: all 0.30s ease-out;
+  -webkit-transition: all 0.30s cubic-bezier(0.4, 0.0, 0.2, 1);
+  transition: all 0.30s cubic-bezier(0.4, 0.0, 0.2, 1);
 
   overflow: hidden;
-  background-color: rgba(255,255,255,0.5);
+  background-color: #58afe5;
+  border: 1px solid rgba(0,0,0,.1);
 
   pointer-events: none;
 }
