--- a/src/elements/route-ui-screensaver/route-ui-screensaver.css
+++ b/src/elements/route-ui-screensaver/route-ui-screensaver.css
@@ -8,6 +8,7 @@
   font-size: 64px;
   color: white;
   text-align: center;
+  -webkit-transition: opacity 5s ease-in;
 }
 .hours {
   font-weight: 400;
